src/java/org/apache/hadoop/hbase/hql/generated/HQLParser.java
/* Generated By:JavaCC: Do not edit this line. HQLParser.java */
package org.apache.hadoop.hbase.hql.generated;

/**
 * Copyright 2007 The Apache Software Foundation
 *
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import java.util.ArrayList;
import java.util.List;
import java.util.Map;
import java.util.HashMap;
import java.io.StringReader;
import java.io.Reader;
import java.io.Writer;
import java.net.URLEncoder;
import java.io.UnsupportedEncodingException;

import org.apache.hadoop.hbase.hql.*;

/**
 * Parsing command line.
 */
public class HQLParser implements HQLParserConstants {
  private String QueryString;
  private TableFormatter formatter;
  private Writer out;

  public HQLParser(final String query, final Writer o, final TableFormatter f) {
    this((Reader)(new StringReader(query)));
    this.QueryString = query;
    this.formatter = f;
    this.out = o;
  }

  public String getQueryStr() {
    return this.QueryString;
  }

/**
 * Parses the given array of command line arguments.
 */
  final public Command terminatedCommand() throws ParseException {
    Command statement = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case HELP:
    case ALTER:
    case CLEAR:
    case SHOW:
    case DESCRIBE:
    case DESC:
    case CREATE:
    case DROP:
    case TRUNCATE:
    case FS:
    case JAR:
    case EXIT:
    case INSERT:
    case DELETE:
    case SELECT:
    case ENABLE:
    case DISABLE:
    case 70:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case HELP:
      case ALTER:
      case CLEAR:
      case SHOW:
      case DESCRIBE:
      case DESC:
      case CREATE:
      case DROP:
      case TRUNCATE:
      case FS:
      case JAR:
      case EXIT:
      case INSERT:
      case DELETE:
      case SELECT:
      case ENABLE:
      case DISABLE:
        statement = cmdStatement();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      jj_consume_token(70);
      break;
    case 0:
      jj_consume_token(0);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return statement;}
    throw new Error("Missing return statement in function");
  }

  final public Command cmdStatement() throws ParseException {
    Command cmd = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXIT:
      cmd = exitCommand();
      break;
    case HELP:
      cmd = helpCommand();
      break;
    case SHOW:
      cmd = showCommand();
      break;
    case DESCRIBE:
    case DESC:
      cmd = descCommand();
      break;
    case CREATE:
      cmd = createCommand();
      break;
    case DROP:
      cmd = dropCommand();
      break;
    case TRUNCATE:
      cmd = truncateCommand();
      break;
    case ALTER:
      cmd = alterCommand();
      break;
    case INSERT:
      cmd = insertCommand();
      break;
    case DELETE:
      cmd = deleteCommand();
      break;
    case SELECT:
      cmd = selectCommand();
      break;
    case ENABLE:
      cmd = enableCommand();
      break;
    case DISABLE:
      cmd = disableCommand();
      break;
    case CLEAR:
      cmd = clearCommand();
      break;
    case FS:
      cmd = fsCommand();
      break;
    case JAR:
      cmd = jarCommand();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
       {if (true) return cmd;}
    throw new Error("Missing return statement in function");
  }

  final public ExitCommand exitCommand() throws ParseException {
  ExitCommand exit = new ExitCommand(this.out);
    jj_consume_token(EXIT);
             {if (true) return exit;}
    throw new Error("Missing return statement in function");
  }

  final public FsCommand fsCommand() throws ParseException {
  Token t = null;
  FsCommand fs = new FsCommand(this.out);
  List<String> query = new ArrayList<String>();
    jj_consume_token(FS);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
      t = jj_consume_token(ID);
        query.add(t.image.toString());
    }
    fs.setQuery(query);
    {if (true) return fs;}
    throw new Error("Missing return statement in function");
  }

  final public JarCommand jarCommand() throws ParseException {
  Token t = null;
  JarCommand jar = new JarCommand(this.out);
  List<String> query = new ArrayList<String>();
    jj_consume_token(JAR);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        t = jj_consume_token(ID);
        break;
      case INTEGER_LITERAL:
        t = jj_consume_token(INTEGER_LITERAL);
        break;
      case FLOATING_POINT_LITERAL:
        t = jj_consume_token(FLOATING_POINT_LITERAL);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
        query.add(t.image.toString());
    }
    jar.setQuery(query);
    {if (true) return jar;}
    throw new Error("Missing return statement in function");
  }

  final public TruncateCommand truncateCommand() throws ParseException {
  TruncateCommand truncate = new TruncateCommand(this.out);
  String tableName = null;
    jj_consume_token(TRUNCATE);
    jj_consume_token(TABLE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
    case QUOTED_IDENTIFIER:
    case STRING_LITERAL:
      tableName = identifier();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    truncate.setTableName(tableName);
    {if (true) return truncate;}
    throw new Error("Missing return statement in function");
  }

  final public HelpCommand helpCommand() throws ParseException {
  Token t = null;
  HelpCommand help = new HelpCommand(this.out, this.formatter);
  String argument = "";
    jj_consume_token(HELP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ALTER:
    case CLEAR:
    case SHOW:
    case DESCRIBE:
    case CREATE:
    case DROP:
    case FS:
    case JAR:
    case EXIT:
    case INSERT:
    case DELETE:
    case SELECT:
    case ID:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SHOW:
        t = jj_consume_token(SHOW);
        break;
      case DESCRIBE:
        t = jj_consume_token(DESCRIBE);
        break;
      case CREATE:
        t = jj_consume_token(CREATE);
        break;
      case DROP:
        t = jj_consume_token(DROP);
        break;
      case EXIT:
        t = jj_consume_token(EXIT);
        break;
      case INSERT:
        t = jj_consume_token(INSERT);
        break;
      case DELETE:
        t = jj_consume_token(DELETE);
        break;
      case SELECT:
        t = jj_consume_token(SELECT);
        break;
      case ALTER:
        t = jj_consume_token(ALTER);
        break;
      case CLEAR:
        t = jj_consume_token(CLEAR);
        break;
      case FS:
        t = jj_consume_token(FS);
        break;
      case JAR:
        t = jj_consume_token(JAR);
        break;
      case ID:
        t = jj_consume_token(ID);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
         argument = t.image.toString();
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
      help.setArgument(argument);
      {if (true) return help;}
    throw new Error("Missing return statement in function");
  }

  final public ShowCommand showCommand() throws ParseException {
  ShowCommand show = new ShowCommand(this.out, this.formatter);
  String argument = null;
    jj_consume_token(SHOW);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
    case QUOTED_IDENTIFIER:
    case STRING_LITERAL:
      argument = identifier();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
      show.setArgument(argument);
      {if (true) return show;}
    throw new Error("Missing return statement in function");
  }

  final public DescCommand descCommand() throws ParseException {
  DescCommand desc = new DescCommand(this.out, this.formatter);
  String argument = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DESCRIBE:
      jj_consume_token(DESCRIBE);
      break;
    case DESC:
      jj_consume_token(DESC);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    argument = identifier();
    desc.setArgument(argument);
    {if (true) return desc;}
    throw new Error("Missing return statement in function");
  }

  final public Map<String, Object> ColumnSpec() throws ParseException {
  Map<String, Object> columnSpec = new HashMap<String, Object>();
  int n = -1;
  Token t = null;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAX_VERSIONS:
      case MAX_LENGTH:
      case COMPRESSION:
      case IN_MEMORY:
      case BLOCK_CACHE_ENABLED:
      case TTL:
      case BLOOMFILTER:
      case VECTOR_SIZE:
      case NUM_HASH:
      case NUM_ENTRIES:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAX_VERSIONS:
        jj_consume_token(MAX_VERSIONS);
        jj_consume_token(EQUALS);
        n = number();
       if(n < 0) {
         n = Integer.MAX_VALUE;
       }
      columnSpec.put("MAX_VERSIONS", n);
        break;
      case MAX_LENGTH:
        jj_consume_token(MAX_LENGTH);
        jj_consume_token(EQUALS);
        n = number();
      columnSpec.put("MAX_LENGTH", n);
        break;
      case COMPRESSION:
        jj_consume_token(COMPRESSION);
        jj_consume_token(EQUALS);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NONE:
          t = jj_consume_token(NONE);
          break;
        case BLOCK:
          t = jj_consume_token(BLOCK);
          break;
        case RECORD:
          t = jj_consume_token(RECORD);
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      columnSpec.put("COMPRESSION", t.image.toString());
        break;
      case IN_MEMORY:
        jj_consume_token(IN_MEMORY);
      columnSpec.put("IN_MEMORY", true);
        break;
      case BLOCK_CACHE_ENABLED:
        jj_consume_token(BLOCK_CACHE_ENABLED);
      columnSpec.put("BLOCK_CACHE_ENABLED", true);
        break;
      case TTL:
        jj_consume_token(TTL);
        jj_consume_token(EQUALS);
        n = number();
      columnSpec.put("TTL", n);
        break;
      case BLOOMFILTER:
        jj_consume_token(BLOOMFILTER);
        jj_consume_token(EQUALS);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BLOOMFILTER:
          t = jj_consume_token(BLOOMFILTER);
          break;
        case COUNTING_BLOOMFILTER:
          t = jj_consume_token(COUNTING_BLOOMFILTER);
          break;
        case RETOUCHED_BLOOMFILTER:
          t = jj_consume_token(RETOUCHED_BLOOMFILTER);
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      columnSpec.put("BLOOMFILTER", t.image.toString());
        break;
      case VECTOR_SIZE:
        jj_consume_token(VECTOR_SIZE);
        jj_consume_token(EQUALS);
        n = number();
      columnSpec.put("VECTOR_SIZE", n);
        break;
      case NUM_HASH:
        jj_consume_token(NUM_HASH);
        jj_consume_token(EQUALS);
        n = number();
      columnSpec.put("NUM_HASH", n);
        break;
      case NUM_ENTRIES:
        jj_consume_token(NUM_ENTRIES);
        jj_consume_token(EQUALS);
        n = number();
      columnSpec.put("NUM_ENTRIES", n);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return columnSpec;}
    throw new Error("Missing return statement in function");
  }

  final public CreateCommand createCommand() throws ParseException {
  CreateCommand createCommand = new CreateCommand(this.out);
  String table = null;
  Map<String, Object> columnSpec = null;
  String column = null;
    jj_consume_token(CREATE);
    jj_consume_token(TABLE);
    table = identifier();
    createCommand.setTable(table);
    jj_consume_token(LPAREN);
    column = identifier();
    columnSpec = ColumnSpec();
    createCommand.addColumnSpec(column, columnSpec);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      column = identifier();
      columnSpec = ColumnSpec();
        createCommand.addColumnSpec(column, columnSpec);
    }
    jj_consume_token(RPAREN);
    {if (true) return createCommand;}
    throw new Error("Missing return statement in function");
  }

  final public AlterCommand alterCommand() throws ParseException {
  AlterCommand alterCommand = new AlterCommand(this.out);
  String table = null;
  String column = null;
  Map<String, Object> columnSpec = null;
    jj_consume_token(ALTER);
    jj_consume_token(TABLE);
    table = identifier();
    alterCommand.setTable(table);
    if (jj_2_1(2)) {
      jj_consume_token(ADD);
      column = identifier();
      columnSpec = ColumnSpec();
         alterCommand.setOperationType(AlterCommand.OperationType.ADD);
         alterCommand.addColumnSpec(column, columnSpec);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
        jj_consume_token(ADD);
        jj_consume_token(LPAREN);
      alterCommand.setOperationType(AlterCommand.OperationType.ADD);
        column = identifier();
        columnSpec = ColumnSpec();
      alterCommand.addColumnSpec(column, columnSpec);
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[16] = jj_gen;
            break label_5;
          }
          jj_consume_token(COMMA);
          column = identifier();
          columnSpec = ColumnSpec();
          alterCommand.addColumnSpec(column, columnSpec);
        }
        jj_consume_token(RPAREN);
        break;
      case DROP:
        jj_consume_token(DROP);
        column = identifier();
      alterCommand.setOperationType(AlterCommand.OperationType.DROP);
      alterCommand.setColumn(column);
        break;
      case CHANGE:
        jj_consume_token(CHANGE);
        column = identifier();
        columnSpec = ColumnSpec();
      alterCommand.setOperationType(AlterCommand.OperationType.CHANGE);
      alterCommand.addColumnSpec(column, columnSpec);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return alterCommand;}
    throw new Error("Missing return statement in function");
  }
